--- a/17_sprint_CV_age determination/notebook/cv.ipynb
+++ b/17_sprint_CV_age determination/notebook/cv.ipynb
@@ -2,44 +2,115 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 62,
    "metadata": {
     "collapsed": true,
     "pycharm": {
      "name": "#%%\n"
     }
    },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import plotly.express as px\n",
+    "from plotly.subplots import make_subplots\n",
+    "from keras.preprocessing.image import ImageDataGenerator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "outputs": [],
+   "source": [
+    "def load_train(path):\n",
+    "    labels = pd.read_csv(r'P:\\practicum_ds\\17_sprint_CV_age determination\\appa-real-release\\gt_train.csv')\n",
+    "    datagen = ImageDataGenerator(\n",
+    "        validation_split=0.25,\n",
+    "        horizontal_flip=True,\n",
+    "        vertical_flip=True,\n",
+    "        rescale=1. / 255)\n",
+    "\n",
+    "    train_gen_flow = datagen.flow_from_dataframe(\n",
+    "        dataframe=labels,\n",
+    "        directory=path,\n",
+    "        x_col='file_name',\n",
+    "        y_col='real_age',\n",
+    "        target_size=(224, 224),\n",
+    "        batch_size=16,\n",
+    "        class_mode='raw',\n",
+    "        subset='training',\n",
+    "        seed=12345)\n",
+    "\n",
+    "    return train_gen_flow"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (2,2) (2,3) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [6]\u001B[0m, in \u001B[0;36m<cell line: 15>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      9\u001B[0m s \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39marray([[\u001B[38;5;241m2\u001B[39m, \u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m3\u001B[39m],\n\u001B[0;32m     10\u001B[0m               [\u001B[38;5;241m4\u001B[39m, \u001B[38;5;241m0\u001B[39m, \u001B[38;5;241m2\u001B[39m],\n\u001B[0;32m     11\u001B[0m               [\u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m5\u001B[39m, \u001B[38;5;241m6\u001B[39m]])\n\u001B[0;32m     12\u001B[0m w \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39marray([[\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m2\u001B[39m],\n\u001B[0;32m     13\u001B[0m               [\u001B[38;5;241m1\u001B[39m,   \u001B[38;5;241m2\u001B[39m]])\n\u001B[1;32m---> 15\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[43mconvolve\u001B[49m\u001B[43m(\u001B[49m\u001B[43ms\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mw\u001B[49m\u001B[43m)\u001B[49m)\n",
-      "Input \u001B[1;32mIn [6]\u001B[0m, in \u001B[0;36mconvolve\u001B[1;34m(sequence, weights)\u001B[0m\n\u001B[0;32m      4\u001B[0m convolution \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39mzeros(\u001B[38;5;28mlen\u001B[39m(sequence) \u001B[38;5;241m-\u001B[39m \u001B[38;5;28mlen\u001B[39m(weights) \u001B[38;5;241m+\u001B[39m \u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m      5\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(convolution\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m0\u001B[39m]):\n\u001B[1;32m----> 6\u001B[0m     convolution[i] \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39msum(\u001B[43mweights\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43m \u001B[49m\u001B[43msequence\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m:\u001B[49m\u001B[43mi\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m+\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;28;43mlen\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mweights\u001B[49m\u001B[43m)\u001B[49m\u001B[43m]\u001B[49m)\n\u001B[0;32m      7\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m convolution\n",
-      "\u001B[1;31mValueError\u001B[0m: operands could not be broadcast together with shapes (2,2) (2,3) "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 100452 validated image filenames.\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "path = r'P:\\practicum_ds\\17_sprint_CV_age determination\\appa-real-release\\train'\n",
     "\n",
-    "def convolve(sequence, weights):\n",
-    "    convolution = np.zeros(len(sequence) - len(weights) + 1)\n",
-    "    for i in range(convolution.shape[0]):\n",
-    "        convolution[i] = np.sum(weights * sequence[i:i + len(weights)])\n",
-    "    return convolution\n",
-    "\n",
-    "s = np.array([[2, 1, 3],\n",
-    "              [4, 0, 2],\n",
-    "              [1, 5, 6]])\n",
-    "w = np.array([[-1, -2],\n",
-    "              [1,   2]])\n",
-    "\n",
-    "print(convolve(s, w))"
-   ]
+    "data = load_train(path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "outputs": [],
+   "source": [
+    "features, target = next(data)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "15"
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target[0]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
