--- a/help/Baseline/HyperparamsTuning.ipynb
+++ b/help/Baseline/HyperparamsTuning.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -13,7 +17,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
@@ -23,7 +31,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Выгрузим данные"
    ]
@@ -31,7 +43,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "train = pd.read_csv('train.csv')"
@@ -40,7 +56,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "test = pd.read_csv('test.csv')"
@@ -49,7 +69,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "train = train.dropna(subset=['price'])\n",
@@ -59,7 +83,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "train = train.fillna(train.median())\n",
@@ -69,7 +97,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "train.drop(['id', 'date'], axis=1, inplace=True)\n",
@@ -80,7 +112,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "test.drop(['id', 'date'], axis=1, inplace=True)\n",
@@ -91,7 +127,11 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -112,7 +152,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Подбор гиперпараметров с помощью RandomizedSearch"
    ]
@@ -120,7 +164,11 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "n_estimators = [int(x) for x in np.linspace(start = 10, stop = 200, num = 20)]\n",
@@ -147,7 +195,11 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -209,7 +261,11 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -233,7 +289,11 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "y_pred = rf_random.best_estimator_.predict(X_test)"
@@ -242,7 +302,11 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -261,14 +325,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "###  Используем hyper_opt"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Для этого нужно определить 4 вещи:\n",
     "    \n",
@@ -282,7 +354,10 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -291,14 +366,14 @@
      "text": [
       "Collecting hyperopt\n",
       "  Downloading hyperopt-0.2.7-py2.py3-none-any.whl (1.6 MB)\n",
-      "\u001b[K     |████████████████████████████████| 1.6 MB 2.4 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: six in /Users/vadimakhmetov/opt/anaconda3/lib/python3.8/site-packages (from hyperopt) (1.15.0)\n",
+      "\u001B[K     |████████████████████████████████| 1.6 MB 2.4 MB/s eta 0:00:01\n",
+      "\u001B[?25hRequirement already satisfied: six in /Users/vadimakhmetov/opt/anaconda3/lib/python3.8/site-packages (from hyperopt) (1.15.0)\n",
       "Requirement already satisfied: tqdm in /Users/vadimakhmetov/opt/anaconda3/lib/python3.8/site-packages (from hyperopt) (4.50.2)\n",
       "Requirement already satisfied: cloudpickle in /Users/vadimakhmetov/opt/anaconda3/lib/python3.8/site-packages (from hyperopt) (1.6.0)\n",
       "Collecting py4j\n",
       "  Downloading py4j-0.10.9.5-py2.py3-none-any.whl (199 kB)\n",
-      "\u001b[K     |████████████████████████████████| 199 kB 8.6 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: networkx>=2.2 in /Users/vadimakhmetov/opt/anaconda3/lib/python3.8/site-packages (from hyperopt) (2.5)\n",
+      "\u001B[K     |████████████████████████████████| 199 kB 8.6 MB/s eta 0:00:01\n",
+      "\u001B[?25hRequirement already satisfied: networkx>=2.2 in /Users/vadimakhmetov/opt/anaconda3/lib/python3.8/site-packages (from hyperopt) (2.5)\n",
       "Requirement already satisfied: numpy in /Users/vadimakhmetov/opt/anaconda3/lib/python3.8/site-packages (from hyperopt) (1.19.2)\n",
       "Requirement already satisfied: future in /Users/vadimakhmetov/opt/anaconda3/lib/python3.8/site-packages (from hyperopt) (0.18.2)\n",
       "Requirement already satisfied: scipy in /Users/vadimakhmetov/opt/anaconda3/lib/python3.8/site-packages (from hyperopt) (1.5.2)\n",
@@ -315,7 +390,11 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from hyperopt import fmin, hp, tpe, Trials, space_eval, STATUS_OK\n",
@@ -325,7 +404,11 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size = 0.20, random_state=3)"
@@ -334,7 +417,11 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def objective(search_space):\n",
@@ -346,7 +433,11 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "search_space = {\n",
@@ -361,7 +452,11 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "algorithm=tpe.suggest  # использовать Tree of Parzen Estimators\n"
@@ -370,7 +465,11 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -392,7 +491,11 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -416,14 +519,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -447,7 +558,11 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "y_pred = RandomForestRegressor(**best_params).fit(X_train, y_train).predict(X_test)"
@@ -456,7 +571,11 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -476,7 +595,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
