--- a/17_sprint_CV_age determination/notebook/cv.ipynb
+++ b/17_sprint_CV_age determination/notebook/cv.ipynb
@@ -2,13 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -16,7 +10,90 @@
     "import plotly.express as px\n",
     "from plotly.subplots import make_subplots\n",
     "from keras.preprocessing.image import ImageDataGenerator"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def load_train(path):\n",
+    "    labels = pd.read_csv(r'P:\\practicum_ds\\17_sprint_CV_age determination\\appa-real-release\\gt_train.csv')\n",
+    "    datagen = ImageDataGenerator(\n",
+    "        validation_split=0.25,\n",
+    "        horizontal_flip=True,\n",
+    "        vertical_flip=True,\n",
+    "        rescale=1. / 255)\n",
+    "\n",
+    "    train_gen_flow = datagen.flow_from_dataframe(\n",
+    "        dataframe=labels,\n",
+    "        directory=path,\n",
+    "        x_col='file_name',\n",
+    "        y_col='real_age',\n",
+    "        target_size=(224, 224),\n",
+    "        batch_size=16,\n",
+    "        class_mode='raw',\n",
+    "        subset='training',\n",
+    "        seed=12345)\n",
+    "\n",
+    "    return train_gen_flow"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "path = r'P:\\practicum_ds\\17_sprint_CV_age determination\\appa-real-release\\train'\n",
+    "\n",
+    "data = load_train(path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "features, target = next(data)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "target[0]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
