--- a/help/Learning curves and bias-variance tradeoff.ipynb
+++ b/help/Learning curves and bias-variance tradeoff.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "1yrfqt3LP1x9"
+    "id": "1yrfqt3LP1x9",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "# Learning Curves and Bias-Variance Tradeoff"
@@ -12,7 +15,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "V02rtODcP1yC"
+    "id": "V02rtODcP1yC",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "In practice, much of the task of machine learning involves selecting algorithms,\n",
@@ -38,7 +44,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "wKObsW8AP1yE",
-    "outputId": "d632e15f-ee28-46cd-9496-fd0f12b36904"
+    "outputId": "d632e15f-ee28-46cd-9496-fd0f12b36904",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -56,7 +65,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "fzDC5cODP1yF"
+    "id": "fzDC5cODP1yF",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Polynomial regression can be done with the functions ``polyfit``\n",
@@ -71,7 +83,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "iFaAc2OrP1yG",
-    "outputId": "cf0f4556-e535-49c7-bdf8-58b8b570edec"
+    "outputId": "cf0f4556-e535-49c7-bdf8-58b8b570edec",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -99,7 +114,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "bF9HRbLkP1yH",
-    "outputId": "d215bc6b-8d09-4a1d-f322-9acb32e65176"
+    "outputId": "d215bc6b-8d09-4a1d-f322-9acb32e65176",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -119,7 +137,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "AfWh0j-iP1yH"
+    "id": "AfWh0j-iP1yH",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Using a 1st-degree polynomial fit (that is, fitting a straight line to x and y),\n",
@@ -137,7 +158,10 @@
      "height": 279
     },
     "id": "ulrEjuf2P1yI",
-    "outputId": "82d8eeb0-52cf-431d-877b-480ecafbeab6"
+    "outputId": "82d8eeb0-52cf-431d-877b-480ecafbeab6",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -169,7 +193,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "RtMgFFmSP1yJ"
+    "id": "RtMgFFmSP1yJ",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "When the error of predicted results is larger than desired,\n",
@@ -196,7 +223,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "mRhChptTP1yK"
+    "id": "mRhChptTP1yK",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "## Bias, Variance, Overfitting, and Underfitting"
@@ -205,7 +235,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "GCsX0_JYP1yK"
+    "id": "GCsX0_JYP1yK",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "We’ll work with a simple example. Imagine that you would like to build\n",
@@ -222,7 +255,10 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "id": "aNM1sy-eP1yL"
+    "id": "aNM1sy-eP1yL",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -237,7 +273,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "MNYXtFPmP1yL"
+    "id": "MNYXtFPmP1yL",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Run the following code to produce an example plot:"
@@ -252,7 +291,10 @@
      "height": 237
     },
     "id": "29Pfyg5iP1yL",
-    "outputId": "8c23f32b-c485-4504-ae1a-18eec02c4ab8"
+    "outputId": "8c23f32b-c485-4504-ae1a-18eec02c4ab8",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -301,7 +343,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "096Tqu-bP1yM"
+    "id": "096Tqu-bP1yM",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "In the above figure, we see fits for three different values of $d$.\n",
@@ -330,7 +375,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "n8tTc5oMP1yM"
+    "id": "n8tTc5oMP1yM",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "## Cross-validation and Testing"
@@ -339,7 +387,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "kp3kTLjiP1yM"
+    "id": "kp3kTLjiP1yM",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Let's start by defining a new dataset which we can use to explore\n",
@@ -357,7 +408,10 @@
      "height": 282
     },
     "id": "R5whY84-P1yN",
-    "outputId": "87ba5b85-4203-449a-f8c4-cf2cf773dd85"
+    "outputId": "87ba5b85-4203-449a-f8c4-cf2cf773dd85",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -414,7 +468,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "FsacxWAyP1yN"
+    "id": "FsacxWAyP1yN",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "In order to quantify the effects of bias and variance and construct\n",
@@ -454,7 +511,10 @@
      "height": 382
     },
     "id": "0jD-FwyLP1yN",
-    "outputId": "c693407e-9fa0-4d13-80ed-4d71c854fe0c"
+    "outputId": "c693407e-9fa0-4d13-80ed-4d71c854fe0c",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -516,7 +576,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "oaWKxwG7P1yO"
+    "id": "oaWKxwG7P1yO",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "This figure compactly shows the reason that cross-validation is\n",
@@ -546,7 +609,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "T19VtTHmP1yO"
+    "id": "T19VtTHmP1yO",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "## Learning Curves"
@@ -555,7 +621,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "fuJxIglqP1yO"
+    "id": "fuJxIglqP1yO",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "A learning curve is a plot of the training and cross-validation\n",
@@ -570,7 +639,10 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "id": "50j9n5pJP1yP"
+    "id": "50j9n5pJP1yP",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -613,7 +685,10 @@
      "height": 295
     },
     "id": "XcO7njUhP1yP",
-    "outputId": "d33c7350-7b8f-444f-dab0-9031f69f31f7"
+    "outputId": "d33c7350-7b8f-444f-dab0-9031f69f31f7",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -636,7 +711,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "6AKtACESP1yP"
+    "id": "6AKtACESP1yP",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Here we show the learning curve for $d = 1$. From the above\n",
@@ -652,7 +730,10 @@
    "execution_count": null,
    "metadata": {
     "id": "cOivFmwcP1yP",
-    "outputId": "718e287a-a64d-4899-965c-b49885fa9284"
+    "outputId": "718e287a-a64d-4899-965c-b49885fa9284",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -673,7 +754,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "odXmjAudP1yQ"
+    "id": "odXmjAudP1yQ",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Here we show the learning curve for $d = 20$. From the above\n",
@@ -693,7 +777,10 @@
    "execution_count": null,
    "metadata": {
     "id": "Qd35ic82P1yQ",
-    "outputId": "290d1538-c002-4343-c022-1a58a67cf6c9"
+    "outputId": "290d1538-c002-4343-c022-1a58a67cf6c9",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -714,7 +801,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "4fWEzoxWP1yQ"
+    "id": "4fWEzoxWP1yQ",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "For our $d=6$ case, we see that we have more training data than we need.\n",
@@ -727,7 +817,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "-Vb-sng3P1yQ"
+    "id": "-Vb-sng3P1yQ",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "## Summary"
@@ -736,7 +829,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "OQzAZzkkP1yR"
+    "id": "OQzAZzkkP1yR",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "We’ve seen above that an under-performing algorithm can be due\n",
@@ -752,7 +848,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "p3flZ8UnP1yR"
+    "id": "p3flZ8UnP1yR",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "#### High Bias"
@@ -761,7 +860,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "n2EYH9hMP1yR"
+    "id": "n2EYH9hMP1yR",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "If our algorithm shows high bias, the following actions might help:\n",
@@ -789,7 +891,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "VRVcQ8FIP1yR"
+    "id": "VRVcQ8FIP1yR",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "#### High Variance"
@@ -798,7 +903,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "EEWSNZSSP1yR"
+    "id": "EEWSNZSSP1yR",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "If our algorithm shows high variance, the following actions might help:\n",
