--- a/final_project/notebook/telecom_research.ipynb
+++ b/final_project/notebook/telecom_research.ipynb
@@ -11992,6 +11992,52 @@
      "name": "#%% md\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Отчет\n",
+    "\n",
+    "### Какие пункты плана были выполнены, а какие — нет (поясните почему)?\n",
+    "\n",
+    "Были выполнены все пункты плана.\n",
+    "\n",
+    "### Какие трудности возникли и как вы их преодолели?\n",
+    "\n",
+    "В ходе выполнения проекта не возникало каких-либо трудностей, делал все как учили.\n",
+    "\n",
+    "### Какие ключевые шаги в решении задачи выделили?\n",
+    "\n",
+    "В ходе выполнения проекта я выделил бы следующие ключевые шаги:\n",
+    "1. EDA (исследовательский анализ данных) и визуализация данных\n",
+    "2. Выявление и исправление/удаление ошибок в данных\n",
+    "3. Заполнение пропусков в данных\n",
+    "4. Избавление от мультиколлинеарности с помощью PCA\n",
+    "5. Апсемплинг низкочастотных значений целевого признака\n",
+    "6. Подбор гиперпараметров, обучение и оценка полученных моделей, построение conflusion matrix\n",
+    "7. Сравнение полученных моделей и выбор наилучшей\n",
+    "8. Написание выводов с понятной интерпретацией полученных результатов\n",
+    "\n",
+    "### Какая ваша итоговая модель и какое у неё качество?\n",
+    "\n",
+    "Моя итоговая модель RandomForestClassifier со следующими гиперпараметрами:\n",
+    "\n",
+    " - n_estimators - 70\n",
+    " - min_samples_split - 2\n",
+    " - min_samples_leaf - 1\n",
+    " - max_depth - 13\n",
+    "\n",
+    "Данная модель показала 0.9364 ROC-AUC.\n",
+    "На тестовой выборке, размером 2154 клиента модель показала\n",
+    " - 37 ошибок первого рода\n",
+    " - 248 ошибок второго рода"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   }
  ],
  "metadata": {
